--- a/DailyActivityTracker/App.config
+++ b/DailyActivityTracker/App.config
@@ -11,4 +11,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="MovieDBContext"
+           connectionString="Data Source=TeamOs-PC;Initial Catalog=DailyActivityTracker;Integrated Security=true"
+           providerName="System.Data.SqlClient"
+/>
+	</connectionStrings>
 </configuration>
