--- a/DailyActivityTracker/DailyActivityTracker.csproj
+++ b/DailyActivityTracker/DailyActivityTracker.csproj
@@ -120,11 +120,6 @@
     <Compile Include="Forms\Todo.Designer.cs">
       <DependentUpon>Todo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202401061154134_DBINIT.cs" />
-    <Compile Include="Migrations\202401061154134_DBINIT.designer.cs">
-      <DependentUpon>202401061154134_DBINIT.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Cipher.cs" />
@@ -139,9 +134,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Todo.resx">
       <DependentUpon>Todo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202401061154134_DBINIT.resx">
-      <DependentUpon>202401061154134_DBINIT.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -166,7 +158,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\HomeBack.png" />
   </ItemGroup>
