data-connection-changed

--- a/DailyActivityTracker/App.config
+++ b/DailyActivityTracker/App.config
@@ -12,7 +12,7 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="MovieDBContext"
+		<add name="DailyActivityContext"
            connectionString="Data Source=TeamOs-PC;Initial Catalog=DailyActivityTracker;Integrated Security=true"
            providerName="System.Data.SqlClient"
 />
